--- a/Redio_btn/index.html
+++ b/Redio_btn/index.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Radio button</title>
+  </head>
+  <body>
+    <p>Select your Size</p>
+    <div class="group"></div>
+    <p class="output"></p>
+    
+   
+    <script src="./app.js"></script>
+  </body>
+</html>
