--- a/checkBox/index.html
+++ b/checkBox/index.html
@@ -1,1 +1,29 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <label for="">
+      <input type="checkbox" name="color" value="Green"  />
+      green
+    </label>
+    <label for="">
+      <input type="checkbox" name="color" value="Red"  />
+      Red
+    </label>
+    <label for="">
+      <input type="checkbox" name="color" value="yellow"  />
+      yellow
+    </label>
+    <label for="">
+      <input type="checkbox" name="color" value="black"  />
+      black
+    </label>
+    <button id="btn">select your color</button>
+    <script src="./app.js"></script>
+  </body>
+</html>
