--- a/Select/index.html
+++ b/Select/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <h4>Select Your language</h4>
+    <select id="lang">
+      <option value="1">java</option>
+      <option value="2">java script</option>
+      <option value="3">python</option>
+      <option value="4">go lang</option>
+      <option value="5">c</option>
+    </select>
+    <br /><br />
+    <button id="btn">Select your language</button>
 
+    <script src="./app.js"></script>
+  </body>
+</html>
